--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,24 @@ ltximg
 *.zip
 
 ### Gradle ###
-.gradle
+bin/
 build/
+.gradle
+.gradletasknamecache
+gradle-app.setting
+!gradle-wrapper.jar
+
+### Eclipse ###
+.settings/
+bin/
+tmp/
+.metadata
+.classpath
+.project
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.loadpath
+.factorypath
