--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,10 @@ def versions = [
 
 dependencies {
     implementation platform("com.typesafe.akka:akka-bom_${versions.ScalaBinary}:2.6.13")
-
     implementation "com.typesafe.akka:akka-actor_${versions.ScalaBinary}"
     testImplementation "com.typesafe.akka:akka-testkit_${versions.ScalaBinary}"
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8'
 }
 
 compileJava {
